--- a/src/fxgui/guiGUIView.fxml
+++ b/src/fxgui/guiGUIView.fxml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <DatePicker BorderPane.alignment="CENTER" />
+      <DatePicker BorderPane.alignment="TOP_LEFT" />
    </left>
-   <bottom>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <items>
-            <Label text="Label" />
-          <Button mnemonicParsing="false" text="Button" />
-            <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" text="Button" />
-            <Button layoutX="74.0" layoutY="12.0" mnemonicParsing="false" text="Button" />
-        </items>
-      </ToolBar>
-   </bottom>
    <top>
-      <Label text="Daily Print" BorderPane.alignment="CENTER" />
+      <Label text="Daily Print" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
    </top>
    <center>
-      <TextFlow prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <TextFlow prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding></TextFlow>
    </center>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+   <bottom>
+      <HBox prefHeight="50.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="TOP_LEFT">
+         <children>
+            <Label text="Create / Edit" />
+          <Button mnemonicParsing="false" text="Go to list view" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
