--- a/src/fxgui/listGUIView.fxml
+++ b/src/fxgui/listGUIView.fxml
@@ -73,10 +73,15 @@
    <left>
       <Button mnemonicParsing="false" text="Older" BorderPane.alignment="CENTER" />
    </left>
-   <bottom>
-      <Button mnemonicParsing="false" text="Back to main" BorderPane.alignment="CENTER" />
-   </bottom>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" text="Back to list view" />
+            <Button mnemonicParsing="false" text="New" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
